Fixed tests and improved perf... mnist basic test wip